tests/errors/semantics/cannot_find_field_in_struct.odl
main :: () -> void {
    foo_t :: struct {
        a := 5;
        b := false;
        c: f64 = 32.5;
    };

    foo := foo_t.{x:10};

    printint(foo.a);
    println();
};